[package]
name = 'zoomerjoin'
version = '0.1.0'
edition = '2021'
authors = ["Beniamino Green <beniamino.green@yale.edu>"]

[lib]
crate-type = [ 'staticlib' ]
name = 'zoomerjoin'

[dependencies]
dashmap = "5.4.0"
extendr-api = {version ="0.3.1", features =["ndarray"]}
itertools = "0.10.5"
kdtree = "0.7.0"
ndarray = {version ="0.15.6", features = ["rayon"]}
ndarray-rand = "0.14.0"
nohash-hasher = "0.2.0"
num_cpus = "1.15.0"
ordered-float = "3.4.0"
rand = "0.8.5"
rayon = "1.6.1"
rustc-hash = "1.1.0"
